style: fix menu spacing and push

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -16,7 +16,11 @@ body {
   padding: 5px;
   border-radius: 5px;
 }
-.menu a { background: #42a5f5 }
+.menu a { 
+  background: #42a5f5;
+  margin-right: 2px; 
+  display: inline-block; 
+}
 .article-meta { background: #cacaca; color: #1a1a1a; }
 .menu a:hover {
   background-color: #ff00ff;
